Fix news images on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -105,9 +105,8 @@ html {
 }
 
 .jekyll-linkpreview-image img {
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
+  width: 110px;
+  max-width: 100%;
 }
 
 .jekyll-linkpreview-body {
